2013-11-27 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: add member function
	query::addConditions
	* src/whereClause.h, src/whereClause.cpp: add functions
	whereClause::addExpr and whereClause::addConditions
	* src/readcsv.cpp: add code to parse infinity and NaN as doubles

2013-11-18 John Wu <John dot Wu at ACM dot org>
	* doc/quickstart.html: update the number of hits for query "a = b
	and c < 10" to be 9 instead of 10 (an error spotted by Neils
	Johson <nielsjohnson at gmail.com>)

2013-11-15 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add extra check for ordering of
	the values in actualMinMax

2013-11-14 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp:289 add block to check for the case of sorted
	input data
	* src/column.cpp: replace numeric_limits<T>::min() with an
	equivalent of numeric_limits<T>::lowest()

2013-10-31 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: add function writeData to perform the actual
	write operations, change the original write to manage the calls to
	writeData
	* examples/ardea.cpp: add option -p to allow the users to specify
	a maximum size for data partitions

2013-10-30 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/part.cpp: add argument voffset to the arguments
	of writeColumn and friends, change their return value to be the
	numbe rof elements written

2013-10-29 John Wu <John dot Wu at ACM dot org>
	* src/table.h: rename tablex::capacity to tablex::bufferCapacity,
	add variables maxpart and access functions

2013-10-25 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/part.cpp: move ibis::part::cleaner::operator()
	to part.cpp, add a warning message

2013-10-21 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h:833 neglected to flip the bits
	* src/column.cpp: print warning about trywrlock failure only when
	gVerbose > 2

2013-10-15 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: array_t<T>::deepCopy has an incorrect test for